--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,14 +1,17 @@
+.navigation_container {
+  padding: 10px 10px 0 10px;
+}
+
 .NavigationBar{
   background-color: #fff;
-  padding: 0 30px;
-  border-radius: 10px;
+  border-radius: 15px;
   height: 88px;
   top: 20px; 
   z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.25);
 }
 
 .NavigationBar .Logo{
