--- a/src/components/pages/content.css
+++ b/src/components/pages/content.css
@@ -4,4 +4,10 @@ img {
   width: 100%;
   height: 100%;
   max-height: 700px;
+  border-radius: 15px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.15);
+}
+
+.page {
+  padding: 10px;
 }
