--- a/src/components/pages/login/login.css
+++ b/src/components/pages/login/login.css
@@ -1,4 +1,4 @@
-.App {
+.container {
   text-align: start;
   display: flex;
   min-height: 100vh;
@@ -6,6 +6,10 @@
   justify-content: center;
   color: #2C3333;
   background-color: #0E8388;
+}
+
+.screen {
+  color: #2E4F4F;
 }
 
 .login-form,
@@ -16,7 +20,7 @@
 }
 .auth-form-container
 {
-  background-color: #FFFDD0;
+  background-color: #CBE4DE;
   font-size: large;
   display: flex;
   flex-direction: column;
@@ -26,7 +30,6 @@
 @media screen and (min-width: 600px) {
   .auth-form-container {
     padding: 5rem;
-    border: 5px solid #FFFDD0;
     min-width: 300px;
     border-radius: 16px;
     margin: 0.5rem;
@@ -48,8 +51,8 @@ input {
   padding: 1rem;
   border: none;
   border-radius: 10px;
-  background-color: black;
-  box-shadow: 0 0 5px 1px rgba(46, 79, 79, 1)
+  background-color: white;
+  box-shadow: 0 0 75px 10px #2e4f4f39;
 }
 
 input:focus {
@@ -67,7 +70,7 @@ button {
   font-size: 15px;
   font-weight: 600;
   cursor: pointer;
-  color: #39304d;
+  color: #2E4F4F;
 }
 
 button i{
