--- a/src/components/pages/signup/signup.css
+++ b/src/components/pages/signup/signup.css
@@ -1,4 +1,4 @@
-.App {
+.container {
   text-align: start;
   display: flex;
   min-height: 100vh;
@@ -8,7 +8,10 @@
   background-color: #0E8388;
 }
 
-.login-form,
+.screen {
+  color: #2E4F4F;
+}
+
 .register-form {
   font-size: large;
   display: flex;
@@ -16,7 +19,7 @@
 }
 .auth-form-container
 {
-  background-color: #fff;
+  background-color: #CBE4DE;
   font-size: large;
   display: flex;
   flex-direction: column;
@@ -26,7 +29,6 @@
 @media screen and (min-width: 600px) {
   .auth-form-container {
     padding: 5rem;
-    border: 5px solid #fff;
     min-width: 300px;
     border-radius: 16px;
     margin: 0.5rem;
@@ -39,22 +41,23 @@ label {
   font-size: 15px;
   text-align: left;
   padding: 0.25rem 0;
-  color: 2E4F4F;
+  color: #2E4F4F;
 }
 
 input {
   margin: 0.5rem 0;
-  color: rgba(205, 205, 205, 1);
+  color: black;
   padding: 1rem;
   border: none;
   border-radius: 10px;
-  background-color: #fff;
-  box-shadow: 0 0 5px 1px rgba(14, 131, 136, 1)
+  background-color: white;
+  box-shadow: 0 0 75px 10px #2e4f4f39;
 }
 
 input:focus {
   border: none;
   outline: none;
+  color: black;
   border-bottom: 3px solid rgba(44, 51, 51, 1);
 }
 
@@ -66,7 +69,7 @@ button {
   font-size: 15px;
   font-weight: 600;
   cursor: pointer;
-  color: #39304d;
+  color: #2E4F4F;
 }
 
 button i{
