--- a/src/components/pages/content.css
+++ b/src/components/pages/content.css
@@ -1,13 +1,111 @@
 img {
   object-fit: fill;
-  object-position: right;
   width: 100%;
-  height: 100%;
-  max-height: 700px;
+  max-height: 660px;
   border-radius: 15px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.15);
+  
 }
 
 .page {
-  padding: 10px;
+  padding: 0 10px 0 10px;
+}
+
+.image_container {
+  margin-top: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.25);
+  line-height: 0;
+}
+
+.common-heading {
+  padding-top: 35px;
+  padding-left: 25px;
+  padding-bottom: 10px;
+}
+
+.body1 {
+  background-color: #fff;
+  border-radius: 15px;
+  top: 20px; 
+  justify-content: space-between;
+  box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.25);
+  line-height: 0;
+}
+
+.notify {
+  color: rgb(245, 222, 178);
+}
+.map_all {
+  border-radius: 0 0 15px 15px;
+}
+
+.message {
+  border-radius: 15px;
+  text-align: start;
+  color: #2C3333;
+  background-color: #2E4F4F;
+  box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.25);
+  line-height: 0;
+}
+
+.notify {
+  padding-top: 35px;
+  padding-left: 25px;
+}
+
+.contact_us {
+  display: flex;
+}
+
+input, textarea {
+  margin: 0.5rem 0;
+  color: black;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 0 75px 10px #2e4f4f39;
+}
+
+input:focus, textarea:focus {
+  border: none;
+  outline: none;
+  color: black;
+}
+
+.submit {
+  margin-top: 92px;
+  margin-left: 30px;
+  width: fit-content;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  height: 50px;
+  cursor: pointer;
+  background-color: rgb(245, 222, 178);
+  color: #2E4F4F;
+}
+
+
+.contact-inputs {
+  padding-left: 15px;
+  font-size: large;
+  display: flex;
+  flex-direction: row;
+}
+
+.user_details {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.user_details input {
+  margin-bottom: 20px;
+}
+
+textarea {
+  margin-top: 17px;
+  margin-left: 30px;
+  height: 92px;
 }
