--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -2,11 +2,11 @@
   padding: 10px 10px 0 10px;
 }
 
-.NavigationBar{
+.NavigationBar {
   background-color: #fff;
   border-radius: 15px;
   height: 88px;
-  top: 20px; 
+  top: 20px;
   z-index: 9999;
   display: flex;
   align-items: center;
@@ -14,34 +14,91 @@
   box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.25);
 }
 
-.NavigationBar .Logo{
+.NavigationBar .Logo {
   padding: 0 20px 0 20px;
 }
 
-.NavigationBar .NavigationMenu ul{
+.NavigationBar .NavigationMenu ul {
   height: 20px;
   display: flex;
   justify-content: space-between;
   max-width: 600px;
   align-items: center;
+  list-style-type: none;
+  padding: 0;
 }
 
 .NavigationBar .NavigationMenu li a {
-  margin-right: 50px;
+  display: flex;
+  margin-right: 20px;
   padding: 10px;
 }
-.NavigationBar .NavigationMenu li a i{
-  padding-right: 10px;
+.NavigationBar .NavigationMenu li a i {
+  margin: 18px 0;
+  border-radius: 10px;
+  padding: 0 10px;
+  transition: all 0.2s ease-in-out;
 }
 
-.NavigationBar .NavigationMenu li a:hover{
+.NavigationBar .NavigationMenu li a:hover {
   background-color: rgb(17, 17, 17);
   color: #fff;
-  border-radius: 5px;
+  border-radius: 10px;
+  padding: 0 10px 0 10px;
   transition: all 0.2s ease-in-out;
 }
 
 a.nav-links {
+  padding: 0;
   color: black;
   text-decoration: none;
+}
+
+.hide {
+  transition: all 0.2s ease-in-out;
+  padding-right: 10px;
+}
+
+.profile {
+  background-color: #fff;
+  color: #000;
+  border-radius: 8px;
+  margin-right: 10px;
+  padding: 17px 10px 0 10px;
+  font-size: x-large;
+  border: none;
+}
+
+.profile2 :hover {
+  background-color: #000;
+  color: #fff;
+  border-radius: 8px;
+  transition: all 0.2s ease-in-out;
+}
+
+
+
+
+
+@media screen and (max-width: 1000px) {
+  .hide {
+    display: none;
+    transition: all 0.2s ease-in-out;
+  }
+
+  .NavigationBar .NavigationMenu li a i {
+    transition: all 0.2s ease-in-out;
+  }
+
+  .NavigationBar .NavigationMenu li {
+    width: 60px;
+  }
+
+  .NavigationBar .NavigationMenu li a {
+    padding: 0px;
+  }
+
+  .NavigationBar .NavigationMenu li a:hover {
+    padding: 0 0 0 2px;
+  }
 }
