--- a/src/components/pages/content.css
+++ b/src/components/pages/content.css
@@ -1,8 +1,9 @@
 img {
   object-fit: fill;
   width: 100%;
-  max-height: 660px;
+  max-height: 800px;
   border-radius: 15px;
+  height: 82vh;
   
 }
 
